fix z-indexes

--- a/css/responsive/mobile.styl
+++ b/css/responsive/mobile.styl
@@ -50,7 +50,7 @@ button,
   top: 0
   left: 0
   right: 0
-  z-index: 30
+  z-index: 100
 
   .social-icon
     svg
@@ -73,7 +73,6 @@ button,
   width: 100%
   height: 90vh
   position: relative
-  z-index: 20
 
 .cover-photo
   position: absolute
@@ -84,7 +83,6 @@ button,
   right: 0
   background-size: cover
   background-position: center
-  z-index: 10
   background-image: linear-gradient(to bottom,  rgba(0, 0, 0, 0) 0, rgba(0, 0, 0, 0) 75%, rgba(0, 0, 0, .25) 100%)
 
 .home
