--- a/css/site.css
+++ b/css/site.css
@@ -1271,7 +1271,7 @@ button,
   top: 0;
   left: 0;
   right: 0;
-  z-index: 30;
+  z-index: 100;
 }
 #header .social-icon svg {
   width: 24px;
@@ -1292,7 +1292,6 @@ button,
   width: 100%;
   height: 90vh;
   position: relative;
-  z-index: 20;
 }
 .cover-photo {
   position: absolute;
@@ -1303,7 +1302,6 @@ button,
   right: 0;
   background-size: cover;
   background-position: center;
-  z-index: 10;
   background-image: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,0) 75%,rgba(0,0,0,0.25) 100%);
 }
 .home .cover-photo-holder {
